Call getFirst() rather than get(0) on the lists the new code reads
Co-Authored-By: Claude Code <noreply@anthropic.com>